--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 </head>
 <body>
     <video class="background" autoplay muted loop>
-        <source src="C:\Users\jnlds\Downloads\danny.mp4" type="video/mp4">
+        <source src="danny.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
@@ -127,7 +127,7 @@
     <div class="player">
         <p>Now Playing: Katawaredoki</p>
         <audio id="myAudio">
-            <source src="C:\Users\jnlds\Downloads\Littleroot.mp3" type="audio/mpeg">
+            <source src="Katawaredoki.mp3" type="audio/mpeg">
             Your browser does not support the audio tag.
         </audio>
         <div class="controls">
@@ -153,7 +153,7 @@ In this and every life, I choose us all the time.
     </div>
 	<div class="video-player">
     <video controls>
-        <source src="C:/Users/jnlds/Downloads/Dannyy.mp4" type="video/mp4">
+        <source src="Dannyy.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </div>
